功能: 实现层次化拓扑的packet分裂逻辑
本次提交实现了完整的packet分裂机制,用于支持层次化NoC拓扑中的带宽适配
(例如 GLB→分配节点→PE)。

主要改动:

1. 统一数据结构:
   - 将独立的dst_id/multicast_dst_ids字段统一为dst_ids向量
   - 新增split_remaining字段追踪剩余分裂次数
   - 保留multicast标志用于模式区分

2. 统一路由接口:
   - 将route()和routeMulticast()合并为单一的route()函数
   - 对单播和多播场景统一返回vector<int>
   - 自动处理本地目标、子孙节点和向上路由

3. ReservationTable映射机制:
   - 新增buildOutputMapping()函数,将输出端口映射到目标节点ID
   - 实现setOutputMapping()/getOutputMapping()用于分裂转发
   - 在预留阶段存储output→dst_ids映射关系

4. 两阶段转发逻辑:
   - HEAD flit: 路由计算和输出映射建立
   - 转发阶段: 分裂模式为每个输出创建独立flit
   - 多播模式: 复制相同flit到所有输出端口

测试场景:
- GLB→4个分配节点→16个PE
- GLB层HEAD flit分裂(16个目标 → 4组)
- BODY/TAIL flit多播复制
- PE计算任务同步完成

本实现支持带宽适配,允许上游节点(如128位宽的GLB)生成聚合packet,
在router层自动分裂为适合下游带宽的小packet(如8位)。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,8 +83,8 @@ add_executable(noxim
         src/ReservationTable.h
         src/LocalRoutingTable.cpp
         src/LocalRoutingTable.h
-        src/MockPE.cpp
-        src/MockPE.h
+        # src/MockPE.cpp
+        # src/MockPE.h
         src/TokenRing.cpp
         src/TokenRing.h
         src/Utils.h
@@ -174,8 +174,8 @@ add_executable(test_glb_tile
         src/ReservationTable.h
         src/LocalRoutingTable.cpp
         src/LocalRoutingTable.h
-        src/MockPE.cpp
-        src/MockPE.h
+        # src/MockPE.cpp
+        # src/MockPE.h
         src/TokenRing.cpp
         src/TokenRing.h
         src/Utils.h
