--- a/config_examples/multicast_workload.yaml
+++ b/config_examples/multicast_workload.yaml
@@ -30,15 +30,17 @@ hierarchical_config:
       node_type: "GLB"
       buffer_size: 4164
       roles: "ROLE_GLB"
-      bandwidth: 8
+      bandwidth: 128
       fanouts: 4  # 该层每个节点连接到下一层的节点数
+      aggregate: true
 
     - level: 2
       node_type: "DISTRIBUTOR"
       buffer_size: 0
       roles: "ROLE_DISTRIBUTOR"
-      bandwidth: 8
+      bandwidth: 32
       fanouts: 4  # 该层每个节点连接到下一层的节点数
+      aggregate: true  # 启用数据聚合功能
       
     - level: 3
       node_type: "COMPUTE"
@@ -71,7 +73,7 @@ use_wirxsleep: false
 #
 clock_period_ps: 1000
 reset_time: 10 # <--- [建议修改] 缩短reset时间，让我们的逻辑更快开始
-simulation_time: 100000 # <--- [关键修改] 增加模拟时间，确保我们能看到完整的交互链
+simulation_time: 10000 # <--- [关键修改] 增加模拟时间，确保我们能看到完整的交互链
 stats_warm_up_time: 0 # <--- [建议修改] 禁用warm up，我们想从一开始就看log
 # power breakdown, nodes communication details
 detailed: false
