重构 ProcessingElement 以使用统一的 BufferManager
主要更改：
1. 重构 ProcessingElement：
   - 将分离的输入/输出缓冲区管理器（unique_ptr）替换为单个原始指针 `unified_buffer_manager_`。
   - 实现了析构函数以正确管理内存。
   - 更新了 `configure`、`internal_transfer_process`、`run_compute_logic`、`run_storage_logic` 和 `reset_logic` 以适配统一接口。

2. 配置更新：
   - 修改 `DataTypes.h` 中的 `LevelConfig`，将 `buffer_size` 改为 `int[3]` 数组。
   - 更新 `ConfigurationManager.cpp` 以支持 `buffer_size` 的标量和序列 YAML 格式。

3. 构建系统：
   - 移除了不再使用的 `ScheduleFactory` 相关代码和 CMake 配置。
   - 更新 .gitignore 忽略 clangd 缓存文件。

验证：
- 通过 `run_tests` 验证了 BufferManager 在共享和独立模式下的功能正确性。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,8 +117,6 @@ add_executable(noxim
         # 智能缓冲区
         src/smartbuffer/BufferManager.cpp
         src/smartbuffer/BufferManager.h
-        src/smartbuffer/ScheduleFactory.cpp
-        src/smartbuffer/ScheduleFactory.h
 )
 
 target_link_libraries(noxim yaml-cpp.a systemc.a)
@@ -208,8 +206,13 @@ add_executable(test_glb_tile
         # 智能缓冲区
         src/smartbuffer/BufferManager.cpp
         src/smartbuffer/BufferManager.h
-        src/smartbuffer/ScheduleFactory.cpp
-        src/smartbuffer/ScheduleFactory.h
 )
 
 target_link_libraries(test_glb_tile yaml-cpp.a systemc.a)
+
+add_executable(run_tests
+        src/smartbuffer/test_buffer_manager.cpp
+        src/smartbuffer/BufferManager.cpp
+)
+
+target_link_libraries(run_tests yaml-cpp.a systemc.a)
