--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,5 +81,6 @@
         "thread": "cpp",
         "unordered_set": "cpp"
     },
-    "cmake.ignoreCMakeListsMissing": true
+    "cmake.ignoreCMakeListsMissing": true,
+    "editor.formatOnSave": true
 }
