feat: 使outputs_required_count成为配置中的必需字段
- 在RoleWorkingSet结构体中添加outputs_required_count作为必需字段
- 更新YAML解析器强制要求该字段存在
- 修改ProcessingElement配置逻辑直接使用配置值
- 移除默认值计算逻辑，配置必须明确指定值
- ROLE_DISTRIBUTOR不需要working_set配置，保持特殊处理

--- a/config_examples/multicast_workload.yaml
+++ b/config_examples/multicast_workload.yaml
@@ -117,16 +117,19 @@ traffic_table_filename: "empty_traffic.txt" # <--- 创建一个空的txt文件
 workload:
   working_set:
     - role: "ROLE_DRAM"
+      outputs_required_count: 512
       data:
         - { data_space: "Weights", size: 3072, reuse_strategy: "resident" }
         - { data_space: "Inputs", size: 576, reuse_strategy: "resident" }
         - { data_space: "Outputs", size: 512, reuse_strategy: "resident" }
     - role: "ROLE_GLB"
+      outputs_required_count: 256
       data:
         - { data_space: "Weights", size: 3072, reuse_strategy: "resident" }
         - { data_space: "Inputs", size: 576, reuse_strategy: "resident" }
         - { data_space: "Outputs", size: 512, reuse_strategy: "resident" }
     - role: "ROLE_BUFFER"
+      outputs_required_count: 0
       data:
         - { data_space: "Weights", size: 1, reuse_strategy: "temporal" }
         - { data_space: "Inputs",  size: 16, reuse_strategy: "temporal" }
