--- a/config_examples/design_workload.yaml
+++ b/config_examples/design_workload.yaml
@@ -27,19 +27,19 @@ hierarchical_config:
       routing_patterns:  
         INPUT:  
           mode: "INPUT"  
-          port_groups: [[1]] 
+          port_groups: [[0]] 
         WEIGHT:  
           mode: "WEIGHT"  
-          port_groups: [[1]]  
+          port_groups: [[0]]  
         OUTPUT:  
           mode: "OUTPUT"  
-          port_groups: [[1]]  
+          port_groups: [[0]]  
 
     # Level 1: GLB (对应 8x12 中的 "8" 这一维)
     # 假设该维度为标准的单播分发（因为日志只显示了12那一维的复杂多播）
     - level: 1
       node_type: "GLB"
-      buffer_size: 16384
+      buffer_size: 3715000
       roles: "ROLE_GLB"
       bandwidth: 512
       fanouts: 8
@@ -56,9 +56,10 @@ hierarchical_config:
     - level: 2
       node_type: "DISTRIBUTOR"
       buffer_size: 0 # 维持您提供的buffer配置
-      roles: "ROLE_BUFFER"
+      roles: "ROLE_DISTRIBUTOR"
       bandwidth: 128
       fanouts: 12
+      aggregate: true
       routing_patterns:  
         
         # pv=0 (WEIGHT): 日志中无多播记录 -> 单播
@@ -90,28 +91,31 @@ hierarchical_config:
       
     # Level 3: COMPUTE (PE)
     - level: 3
-      node_type: "COMPUTE"
+      node_type: "ROLE_BUFFER"
       buffer_size: [384, 32, 32]    
-      roles: "ROLE_COMPUTE"
+      roles: "ROLE_BUFFER"
       bandwidth: 8
       fanouts: 0
 
 workload:
   working_set:
     - role: "ROLE_DRAM"
+      outputs_required_count: 17600
       data:
         - { data_space: "Weights", size: 23232, reuse_strategy: "resident" }
         - { data_space: "Inputs", size: 12675, reuse_strategy: "resident" }
         - { data_space: "Outputs", size: 193600, reuse_strategy: "resident" }
     - role: "ROLE_GLB"
+      outputs_required_count: 17600
       data:
         - { data_space: "Weights", size: 0, reuse_strategy: "resident" }
         - { data_space: "Inputs", size: 975, reuse_strategy: "resident" }
         - { data_space: "Outputs", size: 17600, reuse_strategy: "resident" }
     - role: "ROLE_BUFFER"
+      outputs_required_count: 0
       data:
         - { data_space: "Weights", size: 22, reuse_strategy: "temporal" }
-        - { data_space: "Inputs",  size: 21, reuse_strategy: "temporal" }
+        - { data_space: "Inputs",  size: 11, reuse_strategy: "temporal" }
         - { data_space: "Outputs", size: 2, reuse_strategy: "temporal" }
 
   data_flow_specs:
@@ -119,13 +123,18 @@ workload:
       properties:
         sync_per_timestep: 1
       schedule_template:
-        total_timesteps: 121
+        total_timesteps: 22
         delta_events:
-          - trigger: { on_timestep: "default" }
+          - trigger: { on_timestep_modulo: [11, 0] }
             name: "INITIAL_LOAD_DRAM_TO_GLB"
-            target_group: "1,"
             delta:
               - { data_space: "Weights", size: 22 ,target_role: "ROLE_BUFFER" }
+              - { data_space: "Inputs",  size: 975 ,target_role: "ROLE_GLB" }
+              - { data_space: "Outputs", size: 17600 ,target_role: "ROLE_GLB" }
+
+          - trigger: { on_timestep: "fallback" }
+            name: "delta"
+            delta:
               - { data_space: "Inputs",  size: 975 ,target_role: "ROLE_GLB" }
               - { data_space: "Outputs", size: 17600 ,target_role: "ROLE_GLB" }
 
@@ -137,18 +146,14 @@ workload:
         delta_events:
           - trigger: { on_timestep_modulo: [11, 0] }
             name: "MULTICAST_FILL_INPUTS"
-            target_group: *all_pes_group
             delta:
               - { data_space: "Inputs",  size: 11,target_role: "ROLE_BUFFER" }
-              - { data_space: "Weights", size: 0 ,target_role: "ROLE_BUFFER" }
               - { data_space: "Outputs", size: 2, target_role: "ROLE_BUFFER" }
 
           - trigger: { on_timestep: "fallback" }
             name: "MULTICAST_DELTA_INPUTS_1"
-            target_group: *all_pes_group
             delta:
               - { data_space: "Inputs",  size: 1 ,target_role: "ROLE_BUFFER" }
-              - { data_space: "Weights", size: 0 ,target_role: "ROLE_BUFFER" }
               - { data_space: "Outputs", size: 2 ,target_role: "ROLE_BUFFER" } 
       
       command_definitions:
@@ -159,6 +164,8 @@ workload:
     - role: "ROLE_BUFFER"
       properties:
         compute_latency: 22
+        eviction_interval_cycles: 3025
+        weight_eviction_amount: 22
       schedule_template:
         total_timesteps: 1
         delta_events: []
@@ -193,7 +200,7 @@ use_wirxsleep: false
 #
 clock_period_ps: 1000
 reset_time: 10 # <--- [建议修改] 缩短reset时间，让我们的逻辑更快开始
-simulation_time: 4000 # <--- [关键修改] 增加模拟时间，确保我们能看到完整的交互链
+simulation_time: 4000000 # <--- [关键修改] 增加模拟时间，确保我们能看到完整的交互链
 stats_warm_up_time: 0 # <--- [建议修改] 禁用warm up，我们想从一开始就看log
 # power breakdown, nodes communication details
 detailed: false
