修复未初始化内存、数组越界及多播路由逻辑错误
1. DataStructs.h: 对 Flit 结构体的所有成员进行初始化，解决 Valgrind 报错的未初始化使用问题。
2. NoC.cpp: 修复 buildHierarchical 函数中存在的数组下标 -1 越界读取问题。
3. Router.cpp:
   - 修复 txProcess 中的变量遮蔽 (Shadowing) 问题，确保多播时的状态修改能正确同步回 Buffer。
   - 修正 current_forward 的自增逻辑。
   - 修正 TAIL Flit 释放资源的判断条件，防止多播未完成即释放端口。
4. design_workload.yaml: 更新测试负载配置。

--- a/config_examples/design_workload.yaml
+++ b/config_examples/design_workload.yaml
@@ -30,7 +30,8 @@ hierarchical_config:
           port_groups: [[0]] 
         WEIGHT:  
           mode: "WEIGHT"  
-          port_groups: [[0]]  
+          port_groups: [[0]]
+
         OUTPUT:  
           mode: "OUTPUT"  
           port_groups: [[0]]  
@@ -49,6 +50,7 @@ hierarchical_config:
           port_groups: [[0,1,2,3,4,5,6,7]]
         WEIGHT:  
           port_groups: [[0], [1], [2], [3], [4], [5], [6], [7]]
+          forward_count: 2  
         OUTPUT:  
           port_groups: [[0], [1], [2], [3], [4], [5], [6], [7]]
 
@@ -123,7 +125,7 @@ workload:
       properties:
         sync_per_timestep: 1
       schedule_template:
-        total_timesteps: 22
+        total_timesteps: 121
         delta_events:
           - trigger: { on_timestep_modulo: [11, 0] }
             name: "INITIAL_LOAD_DRAM_TO_GLB"
