feat: 实现层次化NoC优化与传输模式切换
- 修复forward_count逻辑
- 添加传统/优化传输模式切换功能，支持性能对比分析
- 实现正确的packet_size计算，针对不同传输模式
- 实现mobilenet第0层 包括传统/优化两个模式对比

此次修改支持传统eyerisslike架构与优化层次化架构的系统性性能对比，
同时保持向后兼容性。智能转发机制显著减少缓冲区压力并提升系统吞吐量。

--- a/config_examples/multicast_workload.yaml
+++ b/config_examples/multicast_workload.yaml
@@ -14,7 +14,12 @@ topology: "HIERARCHICAL"
 hierarchical_config:  
   num_levels: 3  
   connection_mode: "tree"  
-  word_bits: 8  
+  word_bits: 8
+  
+  # Transmission mode: "traditional" or "optimized"
+  # - "traditional": forward_count = port_groups size, packet_size = 1+1+target_count*(size/bandwidth_scale)
+  # - "optimized": forward_count based on target_role, packet_size uses hierarchical slicing
+  transmission_mode: "optimized"  # Default: "optimized", can be changed to "traditional"
     
   level_configs:  
     - level: 0  
