--- a/config_examples/base_workload.yaml
+++ b/config_examples/base_workload.yaml
@@ -12,6 +12,7 @@
 topology: "HIERARCHICAL"
 
 hierarchical_config:
+  transmission_mode: "traditional"
   num_levels: 4
   connection_mode: "tree"
   word_bits: 8
@@ -22,7 +23,7 @@ hierarchical_config:
       node_type: "DRAM"
       buffer_size: 37748736
       roles: "ROLE_DRAM"
-      bandwidth: 512
+      bandwidth: 64
       fanouts: 1
       routing_patterns:  
         INPUT:  
@@ -42,7 +43,7 @@ hierarchical_config:
       node_type: "GLB"
       buffer_size: 3715000
       roles: "ROLE_GLB"
-      bandwidth: 512
+      bandwidth: 64
       fanouts: 8
       aggregate: true
       routing_patterns:  
@@ -50,17 +51,16 @@ hierarchical_config:
           port_groups: [[0,1,2,3,4,5,6,7]]
         WEIGHT:  
           port_groups: [[0], [1], [2], [3], [4], [5], [6], [7]]
-          forward_count: 8  
+          forward_count: 2  
         OUTPUT:  
           port_groups: [[0], [1], [2], [3], [4], [5], [6], [7]]
-          forward_count: 8
 
     # Level 2: DISTRIBUTOR (对应 8x12 中的 "12" 这一维 - 日志来源层)
     - level: 2
       node_type: "DISTRIBUTOR"
       buffer_size: 0 # 维持您提供的buffer配置
       roles: "ROLE_DISTRIBUTOR"
-      bandwidth: 128
+      bandwidth: 64
       fanouts: 12
       aggregate: true
       routing_patterns:  
@@ -72,7 +72,6 @@ hierarchical_config:
             [0], [1], [2], [3], [4], [5], 
             [6], [7], [8], [9], [10], [11]
           ]
-          forward_count: 12
           
         # pv=1 (INPUT): 日志显示 num_matches=4, 且索引跨度为3 (如0,3,6,9) -> 交错多播
         # 数据被多播到间隔为3的4个PE上
@@ -82,7 +81,6 @@ hierarchical_config:
             [1, 4, 7, 10], 
             [2, 5, 8, 11]
           ]
-          forward_count: 3
             
         # pv=2 (OUTPUT): 日志显示 num_matches=3, 且索引连续 (如0,1,2) -> 块状多播
         # 数据被多播/收集自连续的3个PE
@@ -93,14 +91,13 @@ hierarchical_config:
             [6, 7, 8], 
             [9, 10, 11]
           ]
-          forward_count: 4
       
     # Level 3: COMPUTE (PE)
     - level: 3
       node_type: "ROLE_BUFFER"
-      buffer_size: [384, 32, 32]    
+      buffer_size: [384, 44, 44]    
       roles: "ROLE_BUFFER"
-      bandwidth: 8
+      bandwidth: 64
       fanouts: 0
 
 workload:
@@ -129,7 +126,7 @@ workload:
       properties:
         sync_per_timestep: 1
       schedule_template:
-        total_timesteps: 22
+        total_timesteps: 121
         delta_events:
           - trigger: { on_timestep_modulo: [11, 0] }
             name: "INITIAL_LOAD_DRAM_TO_GLB"
@@ -148,19 +145,14 @@ workload:
       properties:
         sync_per_timestep: 0
       schedule_template:
-        total_timesteps: 275
+        total_timesteps: 25
         delta_events:
-          - trigger: { on_timestep_modulo: [11, 0] }
+          - trigger: { on_timestep: "fallback" }
             name: "MULTICAST_FILL_INPUTS"
             delta:
-              - { data_space: "Inputs",  size: 11,target_role: "ROLE_BUFFER" }
-              - { data_space: "Outputs", size: 2, target_role: "ROLE_BUFFER" }
+              - { data_space: "Inputs",  size: 21,target_role: "ROLE_BUFFER" }
+              - { data_space: "Outputs", size: 22, target_role: "ROLE_BUFFER" }
 
-          - trigger: { on_timestep: "fallback" }
-            name: "MULTICAST_DELTA_INPUTS_1"
-            delta:
-              - { data_space: "Inputs",  size: 1 ,target_role: "ROLE_BUFFER" }
-              - { data_space: "Outputs", size: 2 ,target_role: "ROLE_BUFFER" } 
       
       command_definitions:
         - command_id: 0
@@ -169,8 +161,8 @@ workload:
 
     - role: "ROLE_BUFFER"
       properties:
-        compute_latency: 22
-        eviction_interval_cycles: 3025
+        compute_latency: 242
+        eviction_interval_cycles: 275
         weight_eviction_amount: 22
       schedule_template:
         total_timesteps: 1
@@ -178,10 +170,10 @@ workload:
       command_definitions:
         - command_id: 0
           name: "PROCESS_DELTA"
-          evict_payload: { Weights: 0, Inputs: 1, Outputs: 2 }
+          evict_payload: { Weights: 0, Inputs: 0, Outputs: 2 }
         - command_id: 1
           name: "PROCESS_FULL_CONTEXT"
-          evict_payload: { Weights: 0, Inputs: 11, Outputs: 2 }
+          evict_payload: { Weights: 0, Inputs: 21, Outputs: 22}
 
 buffer_depth: 8 # <--- [建议修改] 稍微调大一点，避免初始调试时因缓冲区太小而产生干扰
 # size of flits, in bits
