--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,5 +82,6 @@
         "unordered_set": "cpp"
     },
     "cmake.ignoreCMakeListsMissing": true,
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "css.format.braceStyle": "expand"
 }
